@@ -1,5 +1,9 @@
 2011-03-29  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/cpp0x/dependent1.C: New.
+
+2011-03-29  Jason Merrill  <jason@redhat.com>
+
 	* g++.dg/parse/memfnquals1.C: New.
 
 	* g++.dg/cpp0x/constexpr-memfn1.C: New.
